Dashboard request numbers are read with PHP's (int) cast, and page offsets are long (#284)
Every hand-written helper in the dashboard that stands in for legacy's `(int)` cast of a request value now reads it with `PhpCast.intval` (D-263). That is PHP 8's cast, held to PHP 8.3.33's own answers by `PhpCastTest`. It reads the leading decimal or exponent number, so `"1e2"` is 100, `"1.9e1"` is 19, `"5abc"` is 5 and `"abc"` is 0.

Before, the helpers did one of two things:
- **Kept only the leading digits**, reading `"1e2"` as 1. These were #249's five: `DashboardListFilters`, `CompanyListFilters`, `Branch`, `Department` and `AdminPayrollController`. `DashboardOrgScope` and `AdminActivitiesController` did the same.
- **Used Java's parse**, refusing `"5abc"` and `"1e2"` and falling back to 0 or a default. These were `AdminRequestsController`, `AdminLeaveBalancesController`, `AdminEmployeeDetailController`, `AdminAttendanceController`, `AdminEmployeesController`, `EmployeeAdminService.contractMonths`, `CompanyForm`, and the guide video, phone country, FAQ and banner forms.

- **Bounds.** A value bound for an `int` field or column is bounded to the `int` range with `Math.clamp`, where PHP's 64-bit value would reach legacy's insert or query. A contract's months are bounded after years become months, so a long duration no longer wraps negative.
- **Offsets.** A page number can now reach `Integer.MAX_VALUE`. `DashboardPage.offsetFor`, its `from` and `to`, and the activities page's offset are now `long`. On `main`, `?page=2147483647` on any list wrapped the offset to a negative `OFFSET`, which the database refuses.
- **`planned_count`.** The column is read as a `long`. A row legacy stored past 2147483647 made MariaDB Connector/J throw `integer overflow`, and the whole workforce planning page answered 500. D-249 gains a correction row; the write side is unchanged.
- **Gate.** `AdminPhpIntCastTest` fails on any `Integer.parseInt`, `Long.parseLong`, `valueOf`, `decode` or `new BigI